# adcp-salesagent-deploy

./: .coveragerc  .dockerignore  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ZEABUR_DEPLOY.md  app.json  conductor.json  crontab  docker-compose.e2e.yml  docker-compose.multi-tenant.yml  docker-compose.yml  fly.toml  mypy.ini  pyproject.toml  pytest.ini  release-please-config.json  run_all_tests.sh  setup_hooks.sh  zeabur.json
.github/: LINK_VALIDATION_CI.md
.github/ISSUE_TEMPLATE/: test-coverage-remediation.md
.github/workflows/: ipr-agreement.yml  pr-title-check.yml  release-please.yml  test.yml
.pre-commit-hooks/: check-gam-auth-support.py  check_docs_links.py  check_hardcoded_urls.py  check_import_usage.py  check_parameter_alignment.py  check_roundtrip_tests.py  check_route_conflicts.py  check_sqlalchemy_2_0.py  check_tenant_context_order.py  check_test_factories.py  check_type_ignore_count.py
alembic/: env.py
alembic/versions/: 001_link_to_initial.py  002_add_foundational_formats.py  003_add_policy_compliance_fields.py  004_add_superadmin_config.py  005_move_config_to_columns.py  006_add_remaining_config_fields.py  007_remove_config_json_column.py  008_add_gam_inventory_tables.py  009_fix_inventory_type_length.py  00b3c68c3ac6_merge_property_authorization_and_.py  010_add_sync_tracking.py  011_add_superadmin_api_key.py  012_add_gam_orders_line_items.py  013_principal_advertiser_mapping.py  014_add_context_persistence.py  015_workflow_improvements.py  016_add_json_validation.py  017_handle_partial_schemas.py  018_add_missing_updated_at.py  018_add_platform_config_to_formats.py  020_fix_tasks_schema_properly_fix_tasks_schema_properly.py  021_add_adcp_product_fields.py  022_add_signals_agent_config.py  023_add_authorized_properties.py  024_add_signals_agents_table.py  02ceecd8d1ab_fix_pricing_model_case.py  039d59477ab4_merge_inventory_profiles_and_product_.py  0937c1edf84c_merge_migration_heads.py  0d4fe6eb03ab_migrate_format_id_to_id_in_product_.py  13a4e417ebb5_add_adcp_v24_fields.py  149ad85edb6f_add_variant_name_and_description_.py  1759f70fc76a_add_webhook_delivery_log.py  182e1c7dcd01_merge_pricing_and_property_migrations.py  1a7693edad5d_ensure_default_property_tags.py  1aa2f5893a4d_convert_json_text_to_jsonb.py  1ad9b025f95e_merge_webhook_delivery_log_with_main.py  226b47580589_add_min_product_spend_to_tenants.py  240284b2f169_rename_gam_axe_fields_to_adapter_.py  2453043b72da_allow_pricing_option_deletion_when_.py  2485bb2ff253_add_strategy_system.py  (+106 more)
docs/: encryption.md  index.md  quickstart.md  security.md
examples/: client_mcp.py  delivery_simulation_demo.py  mock_server_testing_demo.py  scope3_integration.py  upstream_product_catalog_server.py  upstream_quickstart.py  upstream_with_implementation.py
scripts/: README.md  gam_prerequisites_check.py  generate_encryption_key.py  generate_frontend_types.py  initialize_tenant_mgmt_api_key.py  run_admin_ui.py  run_server.py
src/: __init__.py
static/: validation.css  validation.js
templates/: add_inventory_profile.html  add_product_gam.html  add_product_mock.html  base.html  choose_tenant.html  create_principal.html  create_tenant.html  creative_agent_form.html  creative_agents.html  creative_management.html  creative_review.html  creatives_list.html  edit_inventory_profile.html  edit_product_mock.html  error.html  gam_line_item_viewer.html  gam_reporting.html  index.html  inventory_browser.html  inventory_profiles_list.html  inventory_unified.html  landing.html  login.html  media_buy_approval.html  media_buy_detail.html  media_buys_list.html  oidc_test_success.html  orders_browser.html  policy_review.html  policy_rules.html  policy_settings.html  policy_settings_comprehensive.html  product_inventory_config.html  products.html  property_form.html  property_tags_list.html  settings.html  setup_checklist.html  signals_agent_form.html  signals_agents.html  (+10 more)
tests/: README.md  conftest.py  conftest_db.py
(+566 files in other folders)
