[project]
name = "adcp-sales-agent"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "adcp==2.17.0", # Official AdCP Python client for external agent communication and adagents.json validation
    "fastmcp>=2.14.0", # Minimum for MCP 2025-11-25 spec and all security patches
    "google-generativeai>=0.5.4",
    "google-cloud-iam>=2.19.1",
    "rich>=13.7.1",
    "google-ads>=24.1.0",
    "requests>=2.32.3",
    "googleads==46.0.0", # Pinned to avoid API deprecation issues
    "flask>=3.0.0",
    "flask-caching>=2.3.0", # Response caching for improved performance
    "psycopg2-binary>=2.9.9",
    "authlib>=1.3.0",
    "requests-oauthlib>=1.3.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "watchdog>=6.0.0",
    "waitress>=3.0.0",
    "pytz>=2024.1",
    "flask-socketio>=5.5.1",
    "python-socketio>=5.13.0",
    "simple-websocket>=1.1.0",
    "httpx>=0.28.1",
    "a2a-cli>=0.2.0",
    "a2a-sdk[http-server]>=0.3.19", # Latest available version
    "jinja2>=3.1.0",
    "prometheus-client>=0.23.1",
    "types-pytz>=2025.2.0.20250809",
    "markdown>=3.4.0",
    "types-Markdown>=3.4.2.10",
    "freezegun>=1.5.5",
    "babel>=2.17.0",
    "logfire>=4.16.0",
    "pydantic-ai>=0.3.0",
]


[project.optional-dependencies]
dev = [
    "mocker>=1.1.1",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.8.0",
    "datamodel-code-generator>=0.26.0",
    "jsonref>=1.1.0",
    "types-psycopg2>=2.9.21.20251012",
    "types-requests>=2.32.4.20250913",
    "types-pytz>=2025.2.0.20250809",
    "types-waitress>=3.0.1.20250801",
]
ui-tests = [
    "playwright==1.48.0",
    "pytest-playwright==0.6.1",
    "pytest-asyncio>=1.1.0",
    "allure-pytest==2.13.5",
]

[dependency-groups]
dev = [
    "mocker>=1.1.1",
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.3.1",
    "ruff>=0.8.0",
    "datamodel-code-generator>=0.26.0",
    "jsonref>=1.1.0",
    "types-psycopg2>=2.9.21.20251012",
    "types-requests>=2.32.4.20250913",
    "types-pytz>=2025.2.0.20250809",
    "types-waitress>=3.0.1.20250801",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic/versions  # Never format migration files
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "alembic/versions",  # Never format migration files
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module import not at top of file
    "E722",  # bare except
    "F821",  # undefined name
    "F403",  # star imports (TODO: fix by replacing with specific imports)
    "F405",  # undefined from star imports (related to F403)
    "E741",  # ambiguous variable names (l, I, O)
    "B904",  # raise without from (TODO: fix exception handling)
    "B027",  # empty method in abstract class (TODO: add @abstractmethod)
    "F841",  # unused variables (mostly fixed, remaining are complex)
    "UP038", # Use (int, float) instead of int | float in isinstance for compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E722", "F821"]
"admin_ui.py" = ["E402", "E722"]
